--- a/login.html
+++ b/login.html
@@ -99,7 +99,7 @@
     <div class="right-side">
     
       <h1 class="logo"><i class="fas fa-shipping-fast"></i> Courier Management System</h1>
-      <form action="dashboard.html">
+      <form action="dashboard.php">
         <div class="input-group">
           <label for="id">ID</label>
           <input type="text" id="id" name="id" placeholder="Enter your ID" required>
