--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     
     .left-side {
       flex: 1;
-      background-image: url('courier_img.webp'); 
+      background-image: url('./assets/pyaraLarka.jpg'); 
       background-size: cover;
       background-position: center;
       position: relative;
@@ -99,7 +99,7 @@
     <div class="right-side">
     
       <h1 class="logo"><i class="fas fa-shipping-fast"></i> Courier Management System</h1>
-      <form action="dashboard.php">
+      <form action="checkCredentials.php">
         <div class="input-group">
           <label for="id">ID</label>
           <input type="text" id="id" name="id" placeholder="Enter your ID" required>
