--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h1 class="logo"><i class="fas fa-shipping-fast"></i> Courier Management System</h1>
     <p class="description">Track your courier delivery by entering the tracking ID below:</p>
     <div class="track-input">
-        <form action="CourierStatus.php" method="POST">
+        <form action="ShippmentStatus.php" method="POST">
             <input type="text" name= "track_id"placeholder="Enter track ID" required>
             <button type="submit">Track</button>
         </form>
