--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     
     .left-side {
       flex: 1;
-      background-image: url('./assets/pyaraLarka.jpg'); 
+      background-image: url('./assets/courier_img.webp'); 
       background-size: cover;
       background-position: center;
       position: relative;
